--- a/src/component/60sec.css
+++ b/src/component/60sec.css
@@ -1,10 +1,51 @@
+body{
+    background-color: rgb(0, 106, 172);
+}
+
 .link1{
-    color: white;
-    border: 1px solid white;
+    color: black;
     border-radius: 20%;
     text-transform: uppercase;
-    font-size: 45px;
-    font-weight:900;
-    background-color: rgb(0, 0, 0);
-    padding: 2px 10px;
+    font-size: 35px;
+    /* font-weight:900; */
+    padding: 100px 10px;
+}
+
+
+/* line */ 
+
+.line-container{
+    margin: auto;
+}
+
+.line {
+    width: 100%;
+    height: 10px;
+    background-color: white;
+    animation: decreaseWidth 6s infinite;
+}
+
+@keyframes decreaseWidth {
+    0% {
+        width: 100%;
+    }
+    100% {
+        width: 0%;
+    }
+}
+
+.background2{
+    width: 5rem;
+    background-color: white;
+    border-radius: 50px;
+    padding: 0 5px;
+}
+
+.top{
+    position: fixed;
+}
+
+.home00{
+    width: 100rem;
+    font-size: 100rem;
 }
