--- a/src/component/60sec.css
+++ b/src/component/60sec.css
@@ -1,8 +1,10 @@
 body{
-    background-color: rgb(0, 106, 172);
+    background-color: rgb(0, 62, 101);
 }
 
-.link1{
+.link2{
+    position: fixed;
+    top: 0;
     color: black;
     border-radius: 20%;
     text-transform: uppercase;
@@ -35,10 +37,11 @@ body{
 }
 
 .background2{
-    width: 5rem;
+    width: 3rem;
     background-color: white;
     border-radius: 50px;
     padding: 0 5px;
+    height: 60px;
 }
 
 .top{
@@ -48,4 +51,18 @@ body{
 .home00{
     width: 100rem;
     font-size: 100rem;
+}
+
+.background3{
+    width: 3rem;
+}
+
+.background4{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 3rem;
+}
+.background5{
+    width: 25rem;
 }
