--- a/src/component/start/start.css
+++ b/src/component/start/start.css
@@ -1,3 +1,18 @@
 body{
-    background-color: rgb(80, 169, 221);
+    background-color: rgb(0, 62, 101);
+    overflow: hidden;
+}
+
+.img0{
+    width: 100%;
+    height: 100vh;
+}
+
+.link5{
+    position: fixed;
+    /* transform: translateY(-50%); */
+    top: 45%;
+    left: 45%;
+    font-size: 50px;
+    color: white;
 }
