--- a/src/components/streak.css
+++ b/src/components/streak.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(0, 106, 172);
+    background-color: rgb(0, 62, 101);
 }
 
 /* line */ 
@@ -24,28 +24,12 @@ body{
     }
 }
 
-.link1{
-    color: black;
-    border-radius: 20%;
-    text-transform: uppercase;
-    font-size: 35px;
-    /* font-weight:900; */
-    padding: 100px 10px;
-}
-
-
-/* line */ 
-
-.line-container{
-    margin: auto;
-}
-
-
 .background2{
-    width: 5rem;
+    width: 3rem;
     background-color: white;
     border-radius: 50px;
     padding: 0 5px;
+    height: 60px;
 }
 
 .top{
@@ -55,4 +39,18 @@ body{
 .home00{
     width: 100rem;
     font-size: 100rem;
+}
+
+.background3{
+    width: 3rem;
+}
+
+.background4{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 3rem;
+}
+.background5{
+    width: 25rem;
 }
