--- a/src/component/60sec.css
+++ b/src/component/60sec.css
@@ -37,11 +37,58 @@ body{
 }
 
 .background2{
+    width: 2rem;
+    /* background-color: white; */
+    border-radius: 50px;
+    padding: 4px 1px;
+    height: 12px;
+    /* transform: translateY(50%); */
+}
+
+.text{
+    /* border: 1px solid white; */
+    margin-right: 10px;
+    text-align: right;
+}
+
+.text-p{
+    transform: translate(650%, -535%);
+}
+
+.left{
+    transform: translateX(295%);
+}
+
+.background3{
+    width: 2rem;
+    /* background-color: white; */
+    border-radius: 50px;
+    padding: 4px 1px;
+    height: 12px;
+    transform: translateY(20%);
+}
+
+.restart{
+    width: 3rem;
+    /* background-color: white; */
+    border-radius: 50px;
+    padding: 4px 1px;
+    height: 42px;
+    transform: translateY(20%);
+    color: hsl(294, 100%, 35%);
+}
+
+.bestScore{
+    background-color: rgb(14, 220, 96);
+}
+
+.timer{
     width: 3rem;
     background-color: white;
     border-radius: 50px;
-    padding: 0 5px;
-    height: 60px;
+    padding: 4px 1px;
+    height: 42px;
+    transform: translateY(20%);
 }
 
 .top{
@@ -65,4 +112,12 @@ body{
 }
 .background5{
     width: 25rem;
+}
+
+.text{
+ margin-right: 1rem;
+}
+
+.top00{
+        display: inline-block;
 }
