--- a/src/component/home/home.css
+++ b/src/component/home/home.css
@@ -3,14 +3,18 @@
 }
 
 .link0{
-    color: #fff;
+    color: #a01414;
     text-decoration: none;
 }
 
 body{
-    background-color: black;
+    background-color: rgb(20, 18, 151);
 }
 
+button{
+    margin-top: 1rem;
+    background-color: #24ea77;
+}
 
 
 .line {
